// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCleanPasswords should get correct clean passwords 1`] = `
[
  {
    "changes": [
      {
        "letter": "a",
        "substitution": "4",
      },
      {
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "letter": "m",
        "substitution": "nn",
      },
      {
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "Pau$mard",
  },
  {
    "changes": [
      {
        "letter": "a",
        "substitution": "4",
      },
      {
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "letter": "m",
        "substitution": "nn",
      },
    ],
    "password": "Pau$m4rd",
  },
  {
    "changes": [
      {
        "letter": "a",
        "substitution": "4",
      },
      {
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "Pau$nnard",
  },
  {
    "changes": [
      {
        "letter": "a",
        "substitution": "4",
      },
      {
        "letter": "u",
        "substitution": "|_|",
      },
    ],
    "password": "Pau$nn4rd",
  },
  {
    "changes": [
      {
        "letter": "a",
        "substitution": "4",
      },
      {
        "letter": "m",
        "substitution": "nn",
      },
      {
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "Pa|_|$mard",
  },
  {
    "changes": [
      {
        "letter": "a",
        "substitution": "4",
      },
      {
        "letter": "m",
        "substitution": "nn",
      },
    ],
    "password": "Pa|_|$m4rd",
  },
  {
    "changes": [
      {
        "letter": "a",
        "substitution": "4",
      },
      {
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "Pa|_|$nnard",
  },
  {
    "changes": [
      {
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "Pa|_|$nn4rd",
  },
  {
    "changes": [
      {
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "letter": "m",
        "substitution": "nn",
      },
      {
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "P4u$mard",
  },
  {
    "changes": [
      {
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "letter": "m",
        "substitution": "nn",
      },
    ],
    "password": "P4u$m4rd",
  },
  {
    "changes": [
      {
        "letter": "u",
        "substitution": "|_|",
      },
      {
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "P4u$nnard",
  },
  {
    "changes": [
      {
        "letter": "u",
        "substitution": "|_|",
      },
    ],
    "password": "P4u$nn4rd",
  },
  {
    "changes": [
      {
        "letter": "m",
        "substitution": "nn",
      },
      {
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "P4|_|$mard",
  },
  {
    "changes": [
      {
        "letter": "m",
        "substitution": "nn",
      },
    ],
    "password": "P4|_|$m4rd",
  },
  {
    "changes": [
      {
        "letter": "a",
        "substitution": "4",
      },
    ],
    "password": "P4|_|$nnard",
  },
  {
    "changes": [],
    "password": "P4|_|$nn4rd",
  },
]
`;

exports[`getCleanPasswords should limit the substitutions correctly 1`] = `
[
  {
    "changes": [
      {
        "letter": "f",
        "substitution": "v",
      },
      {
        "letter": "f",
        "substitution": "v",
      },
    ],
    "password": "ff",
  },
  {
    "changes": [
      {
        "letter": "f",
        "substitution": "v",
      },
      {
        "letter": "u",
        "substitution": "v",
      },
    ],
    "password": "fu",
  },
  {
    "changes": [
      {
        "letter": "f",
        "substitution": "v",
      },
    ],
    "password": "fv",
  },
]
`;

exports[`getCleanPasswords should substitute to multiple symbols correctly 1`] = `
[
  {
    "changes": [
      {
        "letter": "a",
        "substitution": "@",
      },
      {
        "letter": "fi",
        "substitution": "ﬁ",
      },
    ],
    "password": "pacific",
  },
  {
    "changes": [
      {
        "letter": "a",
        "substitution": "@",
      },
    ],
    "password": "paciﬁc",
  },
  {
    "changes": [
      {
        "letter": "fi",
        "substitution": "ﬁ",
      },
    ],
    "password": "p@cific",
  },
  {
    "changes": [],
    "password": "p@ciﬁc",
  },
]
`;

exports[`getCleanPasswords should substitute to multiple variants correctly 1`] = `
[
  {
    "changes": [
      {
        "letter": "f",
        "substitution": "v",
      },
      {
        "letter": "f",
        "substitution": "v",
      },
    ],
    "password": "ff",
  },
  {
    "changes": [
      {
        "letter": "f",
        "substitution": "v",
      },
      {
        "letter": "u",
        "substitution": "v",
      },
    ],
    "password": "fu",
  },
  {
    "changes": [
      {
        "letter": "f",
        "substitution": "v",
      },
    ],
    "password": "fv",
  },
  {
    "changes": [
      {
        "letter": "u",
        "substitution": "v",
      },
      {
        "letter": "f",
        "substitution": "v",
      },
    ],
    "password": "uf",
  },
  {
    "changes": [
      {
        "letter": "u",
        "substitution": "v",
      },
      {
        "letter": "u",
        "substitution": "v",
      },
    ],
    "password": "uu",
  },
  {
    "changes": [
      {
        "letter": "u",
        "substitution": "v",
      },
    ],
    "password": "uv",
  },
  {
    "changes": [
      {
        "letter": "w",
        "substitution": "vv",
      },
    ],
    "password": "w",
  },
  {
    "changes": [
      {
        "letter": "f",
        "substitution": "v",
      },
    ],
    "password": "vf",
  },
  {
    "changes": [
      {
        "letter": "u",
        "substitution": "v",
      },
    ],
    "password": "vu",
  },
  {
    "changes": [],
    "password": "vv",
  },
]
`;
